<resources>
    <string name="app_name">ITANES</string>
    <string name="tour_name">Arequipa</string>
    <string name="course_text">Trabajo Final - Desarrollo de Aplicaciones Móviles</string>
    <string name="places_count">5 puntos turísticos</string>
    <string name="button_explore">Explorar recorrido</string>
    <string name="title_places">Lugares del recorrido</string>
    <string name="places_subtitle">5 lugares para descubrir</string>
    <string name="title_place_detail">Detalle del Lugar</string>
    <string name="label_address">Dirección:</string>
    <string name="label_coordinates">Coordenadas:</string>
    <string name="button_favorite_add">♡ Guardar en favoritos</string>
    <string name="button_favorite_remove">♥ Quitar de favoritos</string>
    <string name="button_share">Compartir</string>
    <string name="title_share_chooser">Compartir lugar con...</string>
    <string name="error_share_not_available">No hay aplicaciones disponibles para compartir.</string>
    <string name="share_footer">Compartido desde %1$s</string>
    <string name="title_map">Mapa del Lugar</string>
    <string name="error_invalid_coordinates">Coordenadas no válidas para este lugar.</string>
    <string name="button_map">Ver en mapa</string>
    <string name="error_invalid_id">ID de lugar no válido.</string>
    <string name="error_place_not_found">Lugar no encontrado.</string>
    <string name="back_navigation">Regresar</string>
    <string name="zoom_in">Acercar mapa</string>
    <string name="zoom_out">Alejar mapa</string>
</resources>